# saxs

./: .gitignore  .gitmodules  AUTHORS  CODESTYLE.md  CODESTYLE.txt  Cargo.toml  GO_OPTIMIZATION_OPPORTUNITIES.md  LICENSE  LowpassFilter.py  Pn3m_cubic_raw.npy  README.md  README.txt  TECHNICAL_INSIGHTS.txt  TECHNICAL_INSIGHTS_LEGACY_PEAK.md  TODO.txt  __init__.py  check.ipynb  classification.py  config.json  config_log.txt  contours.py  custom_test_manager.py  d_cubic.npy  d_cubic0.npy  data.py  data_break_peak:4.csv  data_gen_gen.sh  data_generation_main.py  data_generation_run.py  data_generation_visualisation.py  data_visualization.ipynb  dataset.py  dataset_test.py  executable.py  fastdw.py  filtering_beggining.py  findPeaks.py  fitting.py  gauss_proc_custom_run.py  gauss_proc_run.py  (+38 more)
.githooks/: README  commit-msg
.ipynb_checkpoints/: heap-checkpoint.ipynb
SAXSpy/: saxspy.py  train.py
arch/: graph.py
data/: 075773_treated_xye.csv  075774_treated_xye.csv  075775_treated_xye.csv  075776_treated_xye.csv  075778_treated_xye.csv  075779_treated_xye.csv  075780_treated_xye.csv  075781_treated_xye.csv  075782_treated_xye.csv  075783_treated_xye.csv  075913_treated_xye.csv  076022_treated_xye.csv  095221_xye.csv
data_generation/: __init__.py  data_visualization.py  generation.py  generation_settings.py  main.py  processing.py  run.sh  saxspy.py
data_processing/: dataset.py  heap.py  meshing.py  standartization.py
data_test/: 075778_treated_xye.csv  075856_treated_xye.csv  075955_treated_xye.csv
db/: .env.example  Makefile  docker-compose.yml  load_data.sh  populate.py
docs/: ARCHITECTURE_REVIEW.todo  CODESTYLE.txt  IO_TRANSPORT_DESIGN.md  METADATA_HIERARCHY.md  NAMING_INCONSISTENCIES.md  REGISTRY_CONSOLIDATION_PLAN.md  TECHNICAL_INSIGHTS.txt  TODO.txt
engine/: tools.py
exp1/: config.yml   train.py
gaussian_processing/: README.md  abstr_peak.py  abstr_phase.py  application.py  custom_peak_classification.py  manager.py  p_peak_classification.py  phase_classificator.py  processing_outils.py
model/: engine.py  model.py  model_build.py  saxs_data_setup.py  setup.py  tools.py  train.py  utils.py
models_setup/: data_setup.py  engine.py  fastchecking.py  model_build.py  model_finetuning.py  preds.py  setup.py  torchtrain.py  train.py  utils.py
outils/: heap.py  heap0.py  heap2.py  heap2.spec  outils.py  processing_outils.py  visualization.py
phase_processing/: abstr_phase.py  custom_peak_classification.py  functions.py  p_peak_classification.py
processing/: abstract_peak_classification.py  abstract_phase_classification.py  background.py  custom_peak_classification.py  functions.py  peak_classification.py  phase_classification.py
res/: 075773_treated_xye_csv.txt  075774_treated_xye.csv  075774_treated_xye_csv.txt  075775_treated_xye_csv.txt  075776_treated_xye_csv.txt  075777_treated_xye.csv  075777_treated_xye_csv.txt  075778_treated_xye_csv.txt  075779_treated_xye.csv  075779_treated_xye_csv.txt  075780_treated_xye.csv  075780_treated_xye_csv.txt  075781_treated_xye.csv  075781_treated_xye_csv.txt  075782_treated_xye.csv  075782_treated_xye_csv.txt  075783_treated_xye.csv  075783_treated_xye_csv.txt  075784_treated_xye.csv  075784_treated_xye_csv.txt  075785_treated_xye_csv.txt  075786_treated_xye.csv  075786_treated_xye_csv.txt  075787_treated_xye.csv  075787_treated_xye_csv.txt  075788_treated_xye.csv  075788_treated_xye_csv.txt  075789_treated_xye.csv  075789_treated_xye_csv.txt  075790_treated_xye_csv.txt  075791_treated_xye.csv  075791_treated_xye_csv.txt  075792_treated_xye.csv  075792_treated_xye_csv.txt  075793_treated_xye.csv  075793_treated_xye_csv.txt  075794_treated_xye.csv  075794_treated_xye_csv.txt  075795_treated_xye.csv  075795_treated_xye_csv.txt  (+344 more)
res_txt/: 075773_treated_xye_csv.txt  075774_treated_xye_csv.txt  075775_treated_xye_csv.txt  075776_treated_xye_csv.txt  075777_treated_xye_csv.txt  075778_treated_xye_csv.txt  075779_treated_xye_csv.txt  075780_treated_xye_csv.txt  075781_treated_xye_csv.txt  075782_treated_xye_csv.txt  075783_treated_xye_csv.txt  075784_treated_xye_csv.txt  075785_treated_xye_csv.txt  075786_treated_xye_csv.txt  075787_treated_xye_csv.txt  075788_treated_xye_csv.txt  075789_treated_xye_csv.txt  075790_treated_xye_csv.txt  075791_treated_xye_csv.txt  075792_treated_xye_csv.txt  075793_treated_xye_csv.txt  075794_treated_xye_csv.txt  075795_treated_xye_csv.txt  075796_treated_xye_csv.txt  075797_treated_xye_csv.txt  075798_treated_xye_csv.txt  075799_treated_xye_csv.txt  075800_treated_xye_csv.txt  075801_treated_xye_csv.txt  075802_treated_xye_csv.txt  075803_treated_xye_csv.txt  075804_treated_xye_csv.txt  075805_treated_xye_csv.txt  075806_treated_xye_csv.txt  075808_treated_xye_csv.txt  075809_treated_xye_csv.txt  075810_treated_xye_csv.txt  075811_treated_xye_csv.txt  075812_treated_xye_csv.txt  075813_treated_xye_csv.txt  (+157 more)
saxs/: README.md  __init__.py  check.py  data_setup.py  engine.py  executable.py  manager_test.py  metamanager.py  model.py  model_finetuning.py  phase_prediction.py  phases.json  pipeline.py  preds.py  pretrained_models.py  saxs_data_setup.py  settings.py  (+2 more)
(+426 files in other folders)
