[project]
name = "saxs"
version = "0.1.0"
description = ""
authors = [{ name = "Isai Gordeev", email = "isai.gordeev.2022@polytechnique.org" }]
requires-python = "~=3.10"
readme = "README.md"
license = "MIT"
dependencies = [
    "numpy>=2.0.0,<3",
    "scipy>=1.14.0,<2",
    "tqdm>=4.66.4,<5",
    "pandas>=2.2.2,<3",
    "matplotlib>=3.9.1,<4",
    "scikit-image>=0.24.0,<0.25",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
