[project]
name = "saxs"
version = "0.1.0"
description = "A Isai Gordeev saxs classification package"
authors = [{ name = "Isai Gordeev", email = "isai.gordeev.2022@polytechnique.org" }]
requires-python = "~=3.10"
readme = "README.md"
license = "MIT"
dependencies = [
    "numpy>=2.0.0,<3",
    "scipy>=1.14.0,<2",
    "tqdm>=4.66.4,<5",
    "pandas>=2.2.2,<3",
    "matplotlib>=3.9.14",
    "scikit-image>=0.24.0,<0.25",
    "uv>=0.8.18",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 80
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "C"]  # errors, formatting, imports, namings, complexity
ignore = ["RUF100"] # custom new lines with \

[dependency-groups]
dev = [
    "matplotlib>=3.9.1",
    "numpy>=2.0.0",
    "pandas>=2.2.2",
    "pytest>=8.4.2",
    "ruff>=0.13.1",
    "scikit-image>=0.24.0",
    "scipy>=1.14.0",
    "tqdm>=4.66.4",
    "uv>=0.8.18",
]
